# take-home-health-innovation-labs

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: cd.yaml  ci-serving.yaml  ci-training.yaml  ci.yaml  template-ci.yaml
infrastructure/: .env_template  ecr.tf  iam.tf  lambda.tf  provider.tf  s3.tf
serving/: Dockerfile  Dockerfile.lambda  app.py  justfile  pyproject.toml  settings.py
serving/test_lambda_payloads/: info.json  redact.json
serving/tests/: test_app.py
training/: Dockerfile  data_loader.py  justfile  pii_data.json  pyproject.toml  settings.py  training.py
training/tests/: test_data_loader.py  test_training.py
utils/: README.md  fake_models.py  interfaces.py  justfile  model_repository.py  model_wrapper.py  pyproject.toml
utils/ml_utils/: fake_models.py  interfaces.py  model_repository.py  model_wrapper.py
utils/tests/: test_utils.py
