[tool.poetry]
name = "take-home-health-innovation-labs-serving"
version = "0.1.0"
description = "Take home test for Health Innocation Labs interview process"
authors = ["stephenCarmody <stephen.m.carmody@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
mangum = "^0.19.0"
pydantic = "^2.10.5"
boto3 = "^1.35.97"
pydantic-settings = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
pythonpath = "."
testpaths = ["tests"] 