[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["stephenCarmody <stephen.m.carmody@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ml_utils"}
]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
numpy = "^2.2.1"
scikit-learn = "^1.6.1"
boto3 = "^1.36.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
